feat: update auth screen

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,15 @@ env.js
 
 # macOS
 .DS_Store
-src/
+src/assets/
+components/
+constants/
+helpers/
+navigation/
+# screens/
+chat/
+post/
+user/
+screenshots/
+store/
 node_modules/
