--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,13 @@ env.js
 # macOS
 .DS_Store
 src/assets/
-components/
+# components/
+app/
 constants/
 helpers/
-navigation/
 # screens/
 user/
+
 screenshots/
 store/
 node_modules/
